# nfetch

./: .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
src/: globals.hpp  installer.cpp  main.cpp  utils.hpp
